# macos-log-collector

./: Cargo.toml  README.md  logs.json
SWIFT-EX/: lasthour.swift  normal.swift  productionready-xprotect.swift  xdr-macos.swift  xprotect-xdrfriendly.swift  xprotect.swift
examples/: basic_usage.rs
profiles/: EnablePrivateLogs.mobileconfig  anubhav.mobileconfig
src/: error.rs  lib.rs  main.rs
src/config/: mod.rs  profile.rs  subsystem.rs
src/manager/: log_manager.rs  mod.rs
src/utils/: mod.rs  permissions.rs  system.rs
tests/: integration_tests.rs
