[package]
name = "macos-log-manager"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A secure macOS private logging manager"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
plist = { version = "1.7", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
libc = "0.2"
log = "0.4"
env_logger = "0.9"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.2"
mockall = "0.11"
test-log = "0.2"